
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
   <TextView
        android:id="@+id/ProbSolved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/probSolved" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <RadioGroup
        android:id="@+id/ratingGroup"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <RadioButton android:id="@+id/Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>
        <RadioButton android:id="@+id/No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"/>
    </RadioGroup>
    
    
    
    <TextView
        android:id="@+id/Ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratings"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="2.0"
        android:stepSize="0.5" />
 
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
 
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            android:id="@+id/txtRatingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />
 
    </LinearLayout>

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textAppearance="?android:attr/textAppearanceLarge" />
 
</LinearLayout>